# farcaster

./: Cargo.toml
discovery/: Cargo.toml
discovery/src/: client.rs  lib.rs  server.rs  util.rs
server/: Cargo.toml
