[package]
name = "farcaster-discovery"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"

socket2 = { version = "0.4", features = ["all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.11", features = ["net"] }
tokio-stream = { version = "0.1" }


[dev-dependencies.tokio]
version = "1"
features = ["macros", "time", "sync", "rt"]
